--- a/src/app/styles/variables/globals.scss
+++ b/src/app/styles/variables/globals.scss
@@ -58,9 +58,9 @@
   --p-icon-sm: 8px;
   --p-icon-md: 10px;
   --p-icon-lg: 12px;
-  --p-top-main: 60px;
+  --p-top-main: 80px;
   --p-bottom-main: 72px;
-  --p-top-main-mobile: 108px;
+  --p-top-main-mobile: 124px;
   --p-top-main-mobile-tiny: 160px;
 
   --w-navbar: 68px;
@@ -76,4 +76,5 @@
   --z-index-header: 2;
   --z-index-navbar: 3;
   --z-index-modal: 4;
+  --z-index-suggestions: 5;
 }
