--- a/src/shared/ui/table-products/styles.module.scss
+++ b/src/shared/ui/table-products/styles.module.scss
@@ -39,6 +39,10 @@
       cursor: pointer;
       border-bottom: var(--border-secondary);
       transition: var(--transition-default);
+      
+      &.manager {
+        cursor: default;
+      }
 
       &:hover {
         background-color: rgb(var(--clr-bg-primary));
