feat: add settings page, changing password logic

--- a/src/app/styles/variables/globals.scss
+++ b/src/app/styles/variables/globals.scss
@@ -9,6 +9,7 @@
   --clr-type-black: 17, 24, 39;
   --clr-type-gray: 107, 114, 128;
   --clr-type-red: 245, 0, 0;
+  --clr-type-yellow: 247, 198, 0;
   --clr-type-green: 38, 162, 18;
   --clr-bg-primary: 243, 244, 246;
   --clr-bg-secondary: 255, 255, 255;
