feat: add pagination for tables

--- a/src/widgets/table/styles.module.scss
+++ b/src/widgets/table/styles.module.scss
@@ -10,6 +10,8 @@
     @media (max-width: 640px) {
       font-size: var(--sz-sm);
       line-height: var(--lnh-sm);
+      flex-wrap: wrap;
+      flex-direction: column-reverse;
 
       select {
         font-size: var(--sz-sm);
